Upgrade to Spring Shell 4
- Spring Boot 4
- Kotlin 2.3
- Gradle 9.3
- removed JLine dependency
- help text updates
- error handling improvements
- includes workarounds for Spring Shell breaking changes